--- a/coin_flip.css
+++ b/coin_flip.css
@@ -155,7 +155,7 @@
 .inputcheckbox label {
     display: inline-block;
     /* Display the label and input on the same line */
-    width: 161px;
+    width: 205px;
     /* Set the width of the label */
     margin-bottom: 5px;
     margin-left: 5px;
@@ -206,4 +206,28 @@
     height: 20px;
     margin: 5px;
     border-radius: 50%;
+}
+
+.smallcoin {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin: 2px;
+    border-radius: 50%;
+}
+
+.verysmallcoin {
+    display: inline-block;
+    width: 5px;
+    height: 5px;
+    margin: 1px;
+    border-radius: 50%;
+}
+
+#coinContainer {
+    display: block;
+}
+
+.coin-row {
+    display: flex;
 }
